.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/SalesIQ__Affiliation__c.object
<CustomObject>
    <fields>
        <fullName>SalesIQ__DSM_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DSM Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Dealer_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dealer Automotive Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliation (Dealer Group)</relationshipLabel>
        <relationshipName>Affiliation1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dealer, OOB Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliation</relationshipLabel>
        <relationshipName>Affiliation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__RSD_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RSD Approved</label>
        <type>Checkbox</type>
    </fields>
    <label>Affiliation</label>
    <listViews>
        <fullName>SalesIQ__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Aff-{0000000000}</displayFormat>
        <label>Affiliation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>